--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "jeroennoten/laravel-adminlte": "^3.14",
+        "jeroennoten/laravel-adminlte": "*",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5",
+        "laravel/ui": "4.5",
+        "nnjeim/world": "*",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
